tests/ui/de-enum-untagged-with-unnamed-data.rs
use deserr::Deserr;

#[derive(Deserr)]
#[deserr(error = deserr::Error)]
enum Enum {
    EmptyVariant,
    VariantWithSomething(u16),
}

fn main() {}
